--- a/ProjectDirectXWork/ProjectDirectXWork.vcxproj
+++ b/ProjectDirectXWork/ProjectDirectXWork.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="KDX.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Porigon.cpp" />
+    <ClCompile Include="RootSignature.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +155,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="KDX.h" />
     <ClInclude Include="Porigon.h" />
+    <ClInclude Include="RootSignature.h" />
     <ClInclude Include="SharedVertex.h" />
     <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
